--- a/LineUp/app/src/main/AndroidManifest.xml
+++ b/LineUp/app/src/main/AndroidManifest.xml
@@ -34,16 +34,19 @@
         </activity>
         <activity android:name=".MyPageActivity" />
         <activity android:name=".LoginActivity" >
+
+        </activity>
+
+
+
+        <activity android:name=".MapActivity"></activity>
+        <activity android:name=".SignUpActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
-        <activity android:name=".MapActivity"></activity>
     </application>
 
 
