--- a/LineUp/app/build.gradle
+++ b/LineUp/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
+    compile 'ru.noties:scrollable:1.1.3'
 
     // 카카오 링크를 사용하기 위해 필요.
     compile group: project.KAKAO_SDK_GROUP, name: 'kakaolink', version: project.KAKAO_SDK_VERSION
