--- a/LineUp/app/build.gradle
+++ b/LineUp/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     // 사용자관리 sdk를 사용하기 위해 필요.
     compile group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
 
+    //picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 }
