--- a/LineUp/app/src/main/AndroidManifest.xml
+++ b/LineUp/app/src/main/AndroidManifest.xml
@@ -51,6 +51,17 @@
         </activity>
         <activity android:name=".ConfirmActivity" >
         </activity>
+        <receiver
+            android:name=".GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                <category android:name="com.example.owner.queuing" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".GcmIntentService" />
     </application>
 
 </manifest>
