--- a/LineUp/app/src/main/AndroidManifest.xml
+++ b/LineUp/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         </activity>
         <activity android:name=".ConfirmActivity" >
         </activity>
+        <activity android:name=".OwnerActivity"></activity>
         <receiver
             android:name=".GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
